test(PromotionsFileReaderTest): remove unnecessary codes